@@ -1,7 +1,8 @@
 Release 4.19
 	- various code cleanup
 	- fixed bug with date heuristics
-	- fix JSON selector and add support for command-line scripts
+	- add --selector option to all command-line scripts
+	- allow selector for JSON data to be a JSON path as well as just a simple token
 
 2020-03-16 Release 4.18
 	- add ImplodeFilter and implode() method to convert a long dataset into a wide dataset
